<resources>
    <string name="app_name">ThirdEye</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Commonly used -->
    <string name="loading">Loading…</string>
    <string name="incorrect_wifi">Not connected to camera device\'s wifi</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="oops">oops</string>
    <string name="invalid_user_key">Invalid user key</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="updated">Updated</string>

    <!-- Device Control Fragment -->
    <string name="device_title">Device Control</string>
    <string name="wifi_control">This Device Wifi Control</string>
    <string name="connect_to_pi">Connect to camera</string>
    <string name="disconnect_from_pi">Disconnect from camera</string>
    <string name="pi_control">Camera Device Controls</string>
    <string name="reboot_pi">Reboot camera</string>
    <string name="shutdown_pi">Shutdown camera</string>
    <string name="pi_rebooting">Camera will reboot in 10 seconds</string>
    <string name="pi_shutdown">Camera will shutdown in 10 seconds</string>
    <string name="pi_unable_reboot">Error: Camera unable to reboot</string>
    <string name="pi_error_reboot">Unknown error with camera rebooting</string>
    <string name="pi_unable_shutdown">Error: Camera unable to shutdown</string>
    <string name="pi_error_shutdown">Unknown error with camera shutting down</string>

    <!-- Display Stream Fragment -->
    <string name="stream_title">Stream</string>
    <string name="grayscale">Grayscale</string>
    <string name="autofocus">Autofocus</string>
    <string name="resolution">Resolution</string>
    <string name="snapshot">Snapshot</string>
    <string name="light">Light</string>
    <string name="record">Record</string>
    <string name="otoscope">Otoscope</string>
    <string name="focus_change_let_go">Focus will change when you let go</string>
    <string name="adjusting_focus">Adjusting focus…</string>
    <string name="unsupported_camera_focus">Camera does not support changing focus</string>
    <string name="error_server_cant_focus">Camera unable to change focus</string>
    <string name="error_camera_focus">Unknown error while changing focus</string>
    <string name="light_change_let_go">Light brightness will change when you let go</string>
    <string name="adjusting_brightness">Adjusting brightness…</string>
    <string name="unsupported_camera_light">Camera does not support light functions</string>
    <string name="error_server_cant_brightness">Camera unable to change brightness</string>
    <string name="error_camera_brightness">Unknown error while changing brightness</string>
    <string name="error_server_cant_snapshot">Camera unable to save snapshot</string>
    <string name="error_camera_snapshot">Unknown error while saving snapshot</string>
    <string name="recording">Recording…</string>
    <string name="error_server_cant_record">Camera unable to save video</string>
    <string name="error_camera_record">Unknown error while recording video</string>
    <string name="error_grayscale">Error changing grayscale</string>
    <string name="error_resolution">Error changing resolution</string>
    <string name="error_server_cant_autofocus">Camera unable to change autofocus</string>
    <string name="error_camera_autofocus">Unknown error while changing autofocus</string>
    <string name="error_server_cant_light">Camera unable to change light</string>
    <string name="error_camera_light">Unknown error while changing light</string>
    <string name="error_server_cant_color">Camera unable to change light color</string>
    <string name="error_camera_color">Unknown error while changing light color</string>

    <!-- External Sensors Fragment -->
    <string name="sensor_title">External Sensors</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="bpm">bpm</string>
    <string name="unsupported_external_sensors">Camera does not support external sensors</string>
    <string name="error_pi_unable_read_sensors">Camera unable to get sensor data</string>
    <string name="error_external_sensors">Unknown error while getting sensor data</string>

    <!-- File Viewer Fragment & File Item View -->
    <string name="file_title">Files</string>
    <string name="no_files_on_server">No files available</string>
    <string name="file_item_img_description">Thumbnail of image on server</string>
    <string name="error_opening_file">Unable to open file</string>
    <string name="error_deleting_file_server">Error deleting file on camera</string>
    <string name="error_fetching_files_server">Error retrieving file listing from server</string>
    <string name="error_parsing_json">Error parsing json message</string>

    <!-- Log Viewer Fragment -->
    <string name="log_title">Log Files</string>
    <string name="no_server_log">No server log</string>
    <string name="no_system_log">No system log</string>
    <string name="error_fetching_logs">Error retrieving logs from server</string>
    <string name="no_logs_to_send">No logs to send</string>

    <!-- Settings Fragment -->
    <string name="settings">Settings</string>

    <!-- Change Filename Dialog -->
    <string name="edit_filename">Edit Filename</string>

    <!-- Change Video Settings Dialog -->
    <string name="video_settings">Video Settings</string>

    <!-- Delete File Dialog -->
    <string name="delete_file">Delete File?</string>

    <!-- Email Logs Dialog -->
    <string name="email_logs">Email a copy of the logs?</string>
    <string name="log_disclaimer">This should only be used to help debug an issue! Patient information may be included in the logs (such as using patient names for recording video or images)</string>

    <!-- Reboot Server Dialog -->
    <string name="reboot_pi_dialog">Reboot Camera?</string>

    <!-- Shutdown Server Dialog -->
    <string name="shutdown_pi_dialog">Shutdown Camera?</string>

    <!-- Set Screen Timer Dialog -->
    <string name="never_timeout">Never turn off screen</string>
    <string name="allow_timeout">Allow screen to turn off after set minutes:</string>

    <!-- Menu Items -->
    <string name="color_picker">Color Picker</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="extra_settings">Extra Settings</string>
    <string name="refresh">Refresh</string>
    <string name="zoom_out">Zoom Out</string>

    <!-- About Fragment -->
    <string name="about_title">About</string>
    <string name="app_info">Application Information</string>
    <string name="version">Version :</string>
    <string name="build_date">Build date :</string>
    <string name="copyright">Copyright and License</string>
    <string name="copyright_string">© 2018 – 2019, University of Michigan</string>
    <string name="license_info">All rights reserved</string>
    <string name="additional_info">Libraries and Resources Used</string>
    <string name="google_vector">Vector icon assets from Google under Apache License 2.0</string>
    <string name="google_volly">Volly from Google under Apache License 2.0</string>
    <string name="glide">Glide from bumptech under Apache License 2.0, BSD and MIT</string>
    <string name="color_picker_dialog">Android Material Color Picker Dialog from Pes8 under MIT</string>

    <!-- Preferences (Values and summaries) -->
    <string name="file_settings_title">File Settings</string>
    <string name="default_filename">Default Filename</string>
    <string name="default_filename_summary">Filename to use for any saved snapshots or videos</string>
    <string name="video_settings_title">Video Settings</string>
    <string name="media_saving">Media Saving</string>
    <string name="media_saving_summary">Take snapshots and record video</string>
    <string name="image_manip">Image Manipulation</string>
    <string name="image_manip_summary">Change resolution and enable filters</string>
    <string name="focus_control">Focus Control</string>
    <string name="focus_controls_summary">Change focal length of camera</string>
    <string name="light_control">Light Control</string>
    <string name="light_control_summary">Adjust lights on camera</string>
    <string name="screen_timeout_title">Screen timeout</string>
    <string name="screen_timeout_summary">Set screen timeout when viewing stream</string>
    <string name="user_settings_title">User Settings</string>
    <string name="user_key">User Key</string>
    <string name="user_key_summary">Identifier key used to preform admin functions on camera</string>
    <string name="network_settings_title">Network Settings</string>
    <string name="network_ssid">Network SSID</string>
    <string name="network_ssid_summary">Name of the wifi network from camera</string>
    <string name="network_password">Network Password</string>
    <string name="network_password_summary">Password to camera\'s wifi network</string>
    <string name="extra_bits_title">Extra Bits</string>
    <string name="about_summary">More information about the app</string>
    <string name="debug_logs_summary">Information used to debug issues</string>
</resources>
