<?xml version="1.0" encoding="utf-8"?>
<edu.umich.globalchallenges.thirdeye.gui.DisplayStreamLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/display_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DisplayStreamFragment">

    <Button
        android:id="@+id/otoscopemode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otoscope"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/web_top_controls" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/web_bottom_controls"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/web_top_controls">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <edu.umich.globalchallenges.thirdeye.gui.VerticalSeekBar
                android:id="@+id/focus_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:thumb="@drawable/ic_focus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <edu.umich.globalchallenges.thirdeye.gui.VerticalSeekBar
                android:id="@+id/light_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:max="255"
                android:thumb="@drawable/ic_brightness" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/web_bottom_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/snapshot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/snapshot" />

        <Button
            android:id="@+id/record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/record" />

        <Button
            android:id="@+id/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/light" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/web_top_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/grayscale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/grayscale" />

        <Button
            android:id="@+id/autofocus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/autofocus" />

        <Button
            android:id="@+id/resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/resolution" />

    </FrameLayout>

    <WebView
        android:id="@+id/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="356dp" />
</edu.umich.globalchallenges.thirdeye.gui.DisplayStreamLayout>